Minor update to credits

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
@@ -45,63 +45,23 @@
 <span id='debugging'></span>
 <span id='caCredits' style='display:none;'>
 	<div style='overflow:scroll;overflow-x:hidden; overflow-y:auto;margin:auto;width:600px;padding-bottom:50px;'>
-		<center><table style='margin-left:auto;padding-top:0px;margin-top:0px;'>
-		<tr>
-			<td colspan='3'><div class='ca_center'><i class='fa fa-users' style='font-size:5rem;margin-top:2rem;'></i></div></td>
-			</tr>
-			<tr>
-				<td colspan='3'><div class='ca_center'><font size='5'>Community Applications</font></div></td>
-			</tr>
-			<tr>
-				<td class='ca_credit'><img src='https://github.com/Squidly271/community.applications/raw/master/webImages/Webp.net-resizeimage%20(1).png' style='width:5rem;height:4.8rem;'></td>
-				<td class='ca_credit'><font size='4.0rem;'><span class='ca_italic ca_bold'>Andrew Zawadzki</span></font></strong></td>
-				<td><font size='4.0rem;'><span class='ca_italic ca_bold'>Main Development</span></font></td>
-			</tr>
-			<tr>
-				<td></td>
-				<td class='ca_credit'>bonienl<br>eschultz</td>
-				<td class='ca_credit'>Additional Contributions</td>
-			</tr>
-			<tr>
-				<td></td>
-				<td class='ca_credit'>Mex</td>
-				<td class='ca_credit'>GUI Layout Design</td>
-			</tr>
-			<tr>
-				<td></td>
-				<td class='ca_credit'>Andrew Zawadzki<br>Kode<br>Limetech</td>
-				<td class='ca_credit'>Application Feed</td>
-			</tr>
-			<tr>
-				<td></td>
-				<td class='ca_credit'>CHBMB<br>SpaceInvaderOne<br>Sparklyballs<br>wgstarks<br>DJoss<br>Zer0Nin3r<br>Mex<br>prostuff1<br>bonienl<br>ljm42<br>kizer<br>trurl</td>
-				<td class='ca_credit'>Additional Testing</td>
-			</tr>
-			<tr>
-				<td></td>
-				<td class='ca_credit'>dockerPolice<br>pluginCop</td>
-				<td class='ca_credit'>Moderation</td>
-			</tr>
-			<tr>
-				<td colspan='3' class='ca_credit'><div class='ca_center'><font size='3'>Additional Libraries</font><br><font size='0'>(All licenced under MIT licence)</font></div></td>
-			</tr>
-			<tr>
-				<td></td>
-				<td class='ca_credit'>Lea Verou</td>
-				<td class='ca_credit'>Awesomeplete</td>
-			</tr>
-			<tr>
-				<td></td>
-				<td class='ca_credit'>Chart.js Contributors</td>
-				<td class='ca_credit'>Chart.js</td>
-			</tr>
-			<tr>
-				<td></td>
-				<td class='ca_credit'>Miles Johnson</td>
-				<td class='ca_credit'>XML2Array<br>Array2XML</td>
-			</tr>
-		</table></center>
-		<br>
+		<div class='ca_center'><i class='fa fa-users' style='font-size:5rem;margin-top:2rem;'></i></div>
+		<div class='ca_center'><font size='5'>Community Applications</font></div>
+		<div class='ca_center ca_creditheader'>Development</div>
+		<div class='ca_center ca_credit'>Andrew Zawadzki</div>
+		<div class='ca_center ca_creditheader'>Additional Contributions</div>
+		<div class='ca_center ca_credit'>bonienl, eschultz</div>
+		<div class='ca_center ca_creditheader'>GUI Layout Design</div>
+		<div class='ca_center ca_credit'>Mex</div>
+		<div class='ca_center ca_creditheader'>Application Feed</div>
+		<div class='ca_center ca_credit'>Andrew Zawadzki, Kode, Limetech</div>
+		<div class='ca_center ca_creditheader'>Additional Testing</div>
+		<div class='ca_center ca_credit'>CHBMB, SpaceInvaderOne, Sparklyballs, wgstarks, DJoss, Zer0Nin3r, Mex, prostuff1, bonienl, ljm42, kizer, trurl</div>
+		<div class='ca_center ca_creditheader'>Moderation</div>
+		<div class='ca_center ca_credit'>dockerPolice, pluginCop</div>
+		<div class='ca_center ca_creditheader'>Additional Libraries</div>
+		<div class='ca_center ca_credit'>Awesomeplete (Lea Verou), Chart.js (various), XML2Array/Array2XML (Miles Johnson)</div>
+		<br>		
 		<div class='ca_center ca_italic'><font size='1rem;'>Copyright &copy; 2015-2020 Andrew Zawadzki</font></div>
 		<div class='ca_center'><a href='https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=7M7CBCVU732XG' target='_blank'><img src='https://github.com/Squidly271/community.applications/raw/master/webImages/donate-button.png' style='height:2.5rem;'></a></div>
 		<div class='ca_center'>Ensuring only safe applications are present is a full time job</div>
