--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
@@ -60,7 +60,8 @@
 		<div class='ca_center ca_creditheader'>Moderation</div>
 		<div class='ca_center ca_credit'>dockerPolice, pluginCop</div>
 		<div class='ca_center ca_creditheader'>Additional Libraries</div>
-		<div class='ca_center ca_credit'>Awesomeplete (Lea Verou), Chart.js (various), XML2Array/Array2XML (Miles Johnson)</div>
+		<div class='ca_center'><font size='0'>(All licenced under MIT Licence)</font></div>
+		<div class='ca_center ca_credit'>Awesomeplete (Lea Verou), Chart.js (various), chartjs-plugin-trendline (Marcus Alsterfjord), XML2Array/Array2XML (Miles Johnson)</div>
 		<br>		
 		<div class='ca_center ca_italic'><font size='1rem;'>Copyright &copy; 2015-2020 Andrew Zawadzki</font></div>
 		<div class='ca_center'><a href='https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=7M7CBCVU732XG' target='_blank'><img src='https://github.com/Squidly271/community.applications/raw/master/webImages/donate-button.png' style='height:2.5rem;'></a></div>
