--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
@@ -10,7 +10,7 @@
 	<li class='startupButton caMenuItem' data-category='onlynew'>New Apps</li>
 	<li class='startupButton caMenuItem' data-category='new'>Updated Apps</li>
 	<li class='startupButton caMenuItem' data-category='random'>Random Apps</li>
-	<li class='startupButton caMenuItem' data-category='topperforming'>Top Performing</li>
+	<li class='startupButton caMenuItem' data-category='topperforming'>Top New Installs</li>
 	<li class='startupButton caMenuItem' data-category='trending'>Trending Apps</li>
 </ul>
 <ul class='caMenu'>
