Simpler way of handling no referrer

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
@@ -22,7 +22,7 @@
 	<li class='caMenuItem' onclick='window.location="/Apps/ca_settings"'>Settings</a></li>
 	<li class='caMenuItem' onclick='disableSort();scrollToTop();showStatistics();'>Statistics</li>
 	<li class='caMenuItem' onclick='disableSort();scrollToTop();showCredits();'>Credits</li>
-	<li class='caMenuItem'><a class='caMenuItem' href='https://forums.unraid.net/topic/38582-plug-in-community-applications/' rel='noreferrer' target='_blank' style='text-decoration:none;color:inherit;'>Support</a></li>
+	<li class='caMenuItem'><a class='caMenuItem' href='https://forums.unraid.net/topic/38582-plug-in-community-applications/' target='_blank' style='text-decoration:none;color:inherit;'>Support</a></li>
 	</ul>
 <div class='menuHeader'>VERSION</div>
 <ul class='nonselectMenu'>
@@ -64,7 +64,7 @@
 		<div class='ca_center ca_credit'>Awesomeplete (Lea Verou), Chart.js (various), chartjs-plugin-trendline (Marcus Alsterfjord), XML2Array/Array2XML (Miles Johnson)</div>
 		<br>		
 		<div class='ca_center ca_italic'><font size='1rem;'>Copyright &copy; 2015-2020 Andrew Zawadzki</font></div>
-		<div class='ca_center'><a href='https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=7M7CBCVU732XG' rel='noreferrer' target='_blank'><img src='https://github.com/Squidly271/community.applications/raw/master/webImages/donate-button.png' style='height:2.5rem;'></a></div>
+		<div class='ca_center'><a href='https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=7M7CBCVU732XG' target='_blank'><img src='https://github.com/Squidly271/community.applications/raw/master/webImages/donate-button.png' style='height:2.5rem;'></a></div>
 		<div class='ca_center'>Ensuring only safe applications are present is a full time job</div>
 	</div>
 </span>
