--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
@@ -58,7 +58,7 @@
 		<div class='ca_center ca_creditheader'>Additional Testing</div>
 		<div class='ca_center ca_credit'>CHBMB, SpaceInvaderOne, Sparklyballs, wgstarks, DJoss, Zer0Nin3r, Mex, prostuff1, bonienl, ljm42, kizer, trurl</div>
 		<div class='ca_center ca_creditheader'>Moderation</div>
-		<div class='ca_center ca_credit'>dockerPolice, pluginCop, bonienl</div>
+		<div class='ca_center ca_credit'>dockerPolice, pluginCop</div>
 		<div class='ca_center ca_creditheader'>Additional Libraries</div>
 		<div class='ca_center'><font size='0'>(All licenced under MIT Licence)</font></div>
 		<div class='ca_center ca_credit'>Awesomeplete (Lea Verou), Chart.js (various), chartjs-plugin-trendline (Marcus Alsterfjord), XML2Array/Array2XML (Miles Johnson)</div>
