--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
@@ -60,8 +60,10 @@
 		<div class='ca_center ca_creditheader'>Moderation</div>
 		<div class='ca_center ca_credit'>dockerPolice, pluginCop</div>
 		<div class='ca_center ca_creditheader'>Additional Libraries</div>
-		<div class='ca_center'><font size='0'>(All licenced under MIT Licence)</font></div>
+		<div class='ca_center'><font size='0'>(Licenced under MIT Licence)</font></div>
 		<div class='ca_center ca_credit'>Awesomeplete (Lea Verou), Chart.js (various), chartjs-plugin-trendline (Marcus Alsterfjord), XML2Array/Array2XML (Miles Johnson)</div>
+		<div class='ca_center'><font size='0'>(Licenced under BSD-3 Licence)</font></div>
+		<div class='ca_center ca_credit'>sprintf.js (Alexandru Mărășteanu)</div>
 		<br>		
 		<div class='ca_center ca_italic'><font size='1rem;'>Copyright &copy; 2015-2020 Andrew Zawadzki</font></div>
 	</div>
