Multi language support

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
@@ -59,6 +59,11 @@
 		<div class='ca_center ca_credit'>CHBMB, SpaceInvaderOne, Sparklyballs, wgstarks, DJoss, Zer0Nin3r, Mex, prostuff1, bonienl, ljm42, kizer, trurl</div>
 		<div class='ca_center ca_creditheader'><?tr("Moderation");?></div>
 		<div class='ca_center ca_credit'>dockerPolice, pluginCop</div>
+<? if ( trim($pluginTranslations["translationCredit"]) ):?>
+		<div class='ca_center ca_creditheader'><?tr("Translation");?></div>
+		<div class='ca_center ca_credit'><?tr("translationCredit");?></div>
+<?endif;?>
+
 		<div class='ca_center ca_creditheader'><?tr("Additional Libraries");?></div>
 		<div class='ca_center ca_credit'>Awesomeplete (Lea Verou), Chart.js (various), chartjs-plugin-trendline (Marcus Alsterfjord), XML2Array/Array2XML (Miles Johnson), sprintf.js (Alexandru Mărășteanu)</div>
 		<br>		
