--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
@@ -56,7 +56,7 @@
 		<div class='ca_center ca_creditheader'><?tr("Application Feed");?></div>
 		<div class='ca_center ca_credit'>Andrew Zawadzki, Kode, Limetech</div>
 		<div class='ca_center ca_creditheader'><?tr("Additional Testing");?></div>
-		<div class='ca_center ca_credit'>CHBMB, SpaceInvaderOne, Sparklyballs, wgstarks, DJoss, Zer0Nin3r, Mex, prostuff1, bonienl, ljm42, kizer, trurl</div>
+		<div class='ca_center ca_credit'>CHBMB, SpaceInvaderOne, Sparklyballs, wgstarks, DJoss, Zer0Nin3r, Mex, prostuff1, bonienl, ljm42, kizer, trurl, Jos</div>
 		<div class='ca_center ca_creditheader'><?tr("Moderation");?></div>
 		<div class='ca_center ca_credit'>dockerPolice, pluginCop</div>
 <? if ( trim($pluginTranslations["translationCredit"]) ):?>
