Misc language updates

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
@@ -62,7 +62,7 @@
 		<div class='ca_center ca_credit'>CHBMB, SpaceInvaderOne, Sparklyballs, wgstarks, DJoss, Zer0Nin3r, Mex, prostuff1, bonienl, ljm42, kizer, trurl, Jos</div>
 		<div class='ca_center ca_creditheader'><?tr("Moderation");?></div>
 		<div class='ca_center ca_credit'>dockerPolice, pluginCop</div>
-<? if ( trim($pluginTranslations["translationCredit"]) ):?>
+<? if ( tr("translationCredit",true) ):?>
 		<div class='ca_center ca_creditheader'><?tr("Translation");?></div>
 		<div class='ca_center ca_credit'><?tr("translationCredit");?></div>
 <?endif;?>
