--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
@@ -38,7 +38,7 @@
 </span><br>
 <div class='mainArea'>
 <div class='spinner fixed'></div>
-<div class='multi_installDiv'><div class='ca_center'><input class='multi_install multi_installButton' type='button' value='<?tr("Install Selected Applications");?>' disabled><input type='button' class='multi_installClear' value='<?tr("Clear");?>' disabled></div></div>
+<div class='multi_installDiv'><span class='multi_deleteButton' style='float:right;display:none;'><a class='ca_fa-delete'></a></span><div class='ca_center'><input class='multi_install multi_installButton' type='button' value='<?tr("Install Selected Applications");?>' disabled><input type='button' class='multi_installClear' value='<?tr("Clear");?>' disabled></div></div>
 <strong><font size='3'></strong></font>
 <div class='dockerSearch' style='display:none'><div class='ca_center'><i class='fa fa-docker initDockerSearch' style='font-size:5rem;color:DarkCyan;cursor:pointer;'></i><br><a class='initDockerSearch' style='cursor:pointer;'><?tr("Click Here To Get More Results From DockerHub");?></a></div></div>
 <div id='templates_content'><div class='ca_templatesDisplay'><font size='6'><?tr("Updating Content");?></font></div></div>
