Pinned menu enabled / disabled as pinned apps happen

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
@@ -4,7 +4,7 @@
 <ul class='caMenu'>
 	<li class='caMenuItem sectionMenu' data-category='installed_apps'><?tr("Installed Apps");?></li>
 	<li class='caMenuItem sectionMenu' data-category='previous_apps'><?tr("Previous Apps");?></li>
-	<li class='caMenuItem sectionMenu' data-category='pinned_apps'><?tr("Pinned Apps");?></li>
+	<li class='caMenuItem sectionMenu caPinnedMenu' data-category='pinned_apps'><?tr("Pinned Apps");?></li>
 	<li class='caMenuItem favouriteRepo'><?tr("Favourite Repo");?></li>
 	<hr>
 	<li class='startupButton caMenuItem' data-category='onlynew'><?tr("New Apps");?></li>
