Don't show private in stats if no privates present

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
@@ -36,11 +36,8 @@
 	<li class='caMenuItem debugging'><?tr("Debugging");?></li>
 <?endif;?>
 </ul>
-
- <br><br><br>
 </div>
-<br>
-</span><br>
+</span>
 <div class='mainArea'>
 <div class='spinner fixed'></div>
 <div class='multi_installDiv'><span class='multi_deleteButton' style='float:right;visibility:hidden;'><a class='ca_fa-delete' style='font-size:2.5rem;'></a></span><div class='ca_center'><input class='multi_install multi_installButton' type='button' value='<?tr("Install Selected Applications");?>' disabled><input type='button' class='multi_installAll' value='<?tr("Select all on page")?>'><input type='button' class='multi_installClear' value='<?tr("Clear");?>' disabled></div></div>
@@ -73,4 +70,3 @@
 		<div class='ca_center ca_italic'><font size='1rem;'><?tr("Copyright");?> &copy; 2015-2021 Andrew Zawadzki</font></div>
 	</div>
 </span>
-
