Add tooltip to stats to save me time

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
@@ -19,7 +19,7 @@
 	<li class='caMenuItem clearSearch caMenuDisabled'><?tr("Clear Search");?></li>
 <hr class='category_hr'>
 	<li class='caMenuItem' onclick='window.location="/Apps/ca_settings"'><?tr("Settings");?></a></li>
-	<li class='caMenuItem' onclick='disableSort();scrollToTop();showStatistics();'><?tr("Statistics");?></li>
+	<li class='caMenuItem statistics' onclick='disableSort();scrollToTop();showStatistics();'><?tr("Statistics");?></li>
 	<li class='caMenuItem' onclick='disableSort();scrollToTop();showCredits();'><?tr("Credits");?></li>
 	<li class='caMenuItem'><a class='caMenuItem' href='https://forums.unraid.net/topic/38582-plug-in-community-applications/' target='_blank' style='text-decoration:none;color:inherit;'><?tr("Support");?></a></li>
 <hr class='category_hr'>
