--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
@@ -2,7 +2,15 @@
 <div class='menuItems'>
 <ul class='caMenu'>
 	<li class='caMenuItem sectionMenu' data-category='installed_apps'><?tr("Installed Apps");?></li>
+	<ul class='subCategory'>
+		<li class='caMenuItem sectionMenu' data-category='inst_docker'><?tr("Docker");?></li>
+		<li class='caMenuItem sectionMenu' data-category='inst_plugins'><?tr("Plugins");?></li>
+	</ul>
 	<li class='caMenuItem sectionMenu' data-category='previous_apps'><?tr("Previous Apps");?></li>
+	<ul class='subCategory'>
+		<li class='caMenuItem sectionMenu' data-category='prev_docker'><?tr("Docker");?></li>
+		<li class='caMenuItem sectionMenu' data-category='prev_plugins'><?tr("Plugins");?></li>
+	</ul>
 	<li class='caMenuItem sectionMenu caPinnedMenu' data-category='pinned_apps'><?tr("Pinned Apps");?></li>
 	<li class='caMenuItem favouriteRepo'><?tr("Favourite Repo");?></li>
 	<hr>
