--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
@@ -2,7 +2,7 @@
 <div class='menuItems'>
 <ul class='caMenu '>
 	<li class='caMenuItem sectionMenu onlyShowWithFeed' data-category='installed_apps'><?tr("Installed Apps");?></li>
-	<ul class='subCategoryonlyShowWithFeed'>
+	<ul class='subCategory onlyShowWithFeed'>
 		<li class='caMenuItem sectionMenu onlyShowWithFeed' data-category='inst_docker'><?tr("Docker");?></li>
 		<li class='caMenuItem sectionMenu onlyShowWithFeed' data-category='inst_plugins'><?tr("Plugins");?></li>
 	</ul>
