--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
@@ -73,7 +73,7 @@
 		<div class='ca_center ca_creditheader'><?tr("Moderation");?></div>
 		<div class='ca_center ca_credit'>dockerPolice, pluginCop</div>
 		<div class='ca_center ca_creditheader'><?tr("Additional Libraries");?></div>
-		<div class='ca_center ca_credit'>Awesomeplete (Lea Verou), Chart.js (various), chartjs-plugin-trendline (Marcus Alsterfjord), XML2Array/Array2XML (Miles Johnson), sprintf.js (Alexandru Mărășteanu) clamp.js (Joseph Schmitt)</div>
+		<div class='ca_center ca_credit'>Awesomeplete (Lea Verou)<br>Chart.js (various)<br>chartjs-plugin-trendline (Marcus Alsterfjord)<br>XML2Array/Array2XML (Miles Johnson)<br>sprintf.js (Alexandru Mărășteanu) (&lt; Unraid 6.10 only)</div>
 		<br>
 		<div class='ca_center ca_italic'><font size='1rem;'><?tr("Copyright");?> &copy; 2015-2021 Andrew Zawadzki</font></div>
 	</div>
