Disable docker sub menu on installed / previous if service isn't enabled

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
@@ -3,12 +3,12 @@
 <ul class='caMenu '>
 	<li class='caMenuItem sectionMenu onlyShowWithFeed' data-category='installed_apps'><?tr("Installed Apps");?></li>
 	<ul class='subCategory onlyShowWithFeed'>
-		<li class='caMenuItem sectionMenu onlyShowWithFeed' data-category='inst_docker'><?tr("Docker");?></li>
+		<li class='caMenuItem sectionMenu onlyShowWithFeed dockerSpecific' data-category='inst_docker'><?tr("Docker");?></li>
 		<li class='caMenuItem sectionMenu onlyShowWithFeed' data-category='inst_plugins'><?tr("Plugins");?></li>
 	</ul>
 	<li class='caMenuItem sectionMenu onlyShowWithFeed' data-category='previous_apps'><?tr("Previous Apps");?></li>
 	<ul class='subCategory onlyShowWithFeed'>
-		<li class='caMenuItem sectionMenu' data-category='prev_docker'><?tr("Docker");?></li>
+		<li class='caMenuItem sectionMenu dockerSpecific' data-category='prev_docker'><?tr("Docker");?></li>
 		<li class='caMenuItem sectionMenu' data-category='prev_plugins'><?tr("Plugins");?></li>
 	</ul>
 	<li class='caMenuItem sectionMenu caPinnedMenu onlyShowWithFeed' data-category='pinned_apps'><?tr("Pinned Apps");?></li>
