--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
@@ -65,13 +65,11 @@
 		<div class='ca_center ca_creditheader'><?tr("Additional Contributions");?></div>
 		<div class='ca_center ca_credit'>bonienl, eschultz</div>
 		<div class='ca_center ca_creditheader'><?tr("GUI Layout Design");?></div>
-		<div class='ca_center ca_credit'>Mex</div>
+		<div class='ca_center ca_credit'>Magnus Engø</div>
 		<div class='ca_center ca_creditheader'><?tr("Application Feed");?></div>
 		<div class='ca_center ca_credit'>Andrew Zawadzki, Kode, Limetech</div>
 		<div class='ca_center ca_creditheader'><?tr("Additional Testing");?></div>
 		<div class='ca_center ca_credit'>CHBMB, SpaceInvaderOne, Sparklyballs, wgstarks, DJoss, Zer0Nin3r, Mex, prostuff1, bonienl, ljm42, kizer, trurl, Jos, Limetech</div>
-		<div class='ca_center ca_creditheader'><?tr("Moderation");?></div>
-		<div class='ca_center ca_credit'>dockerPolice, pluginCop</div>
 		<div class='ca_center ca_creditheader'><?tr("Additional Libraries");?></div>
 		<div class='ca_center ca_credit'>Awesomeplete (Lea Verou)<br>Chart.js (various)<br>chartjs-plugin-trendline (Marcus Alsterfjord)<br>XML2Array/Array2XML (Miles Johnson)<br>sprintf.js (Alexandru Mărășteanu) (&lt; Unraid 6.10 only)</div>
 		<br>
