--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
@@ -34,7 +34,7 @@
 <hr class='category_hr'>
 	</ul>
 <ul class='nonselectMenu'>
-	<li>VERSION</li>
+	<li><?=tr("VERSION");?></li>
 	<li><span id='caInstalledVersion'></span></li>
 	<li class='caMenuItem caChangeLog'><?tr("Change Log");?></li>
 <?if ($md5Error):?>
