Selectable results per page on the fly

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
@@ -45,7 +45,7 @@
 <div class='mainArea'>
 <div class='spinner fixed'></div>
 <strong><font size='3'></strong></font>
-<div class='searchArea onlyShowWithFeed'><span id='searchFilter'><input type='text' id='searchBox' placeholder='<?tr('Search')?>'><span class='searchSubmit' onclick='doSearch(true)'><i id='searchButton' class='fa fa-search fa-lg'></i></span>
+<div class='searchArea onlyShowWithFeed'><span id='searchFilter'><input type='text' id='searchBox' placeholder='<?tr('Search')?>'><span class='searchSubmit' onclick='doSearch(true)'><i id='searchButton' class='fa fa-search fa-lg'></i></span><span class='maxPerPage' id='maxPerPage' style='display:none;'></span>
 </div>
 <div id="Category" class="categoryLine">&nbsp;
 </div>
