--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
@@ -58,19 +58,19 @@
 </div>
 <span id='debugging'></span>
 <span id='caCredits' style='display:none;'>
-	<div style='overflow:scroll;overflow-x:hidden; overflow-y:auto;margin:auto;width:600px;padding-bottom:50px;'>
+	<div class='credits'>
 		<div class='ca_center'><i class='fa fa-users' style='font-size:5rem;margin-top:2rem;'></i></div>
 		<div class='ca_center'><font size='5'>Community Applications</font></div>
 		<div class='ca_center ca_creditheader'><?tr("Development");?></div>
 		<div class='ca_center ca_credit'>Andrew Zawadzki</div>
 		<div class='ca_center ca_creditheader'><?tr("Additional Contributions");?></div>
-		<div class='ca_center ca_credit'>bonienl, eschultz</div>
+		<div class='ca_center ca_credit'>bonienl, Lime Technology Inc</div>
 		<div class='ca_center ca_creditheader'><?tr("GUI Layout Design");?></div>
 		<div class='ca_center ca_credit'>Magnus Engø</div>
 		<div class='ca_center ca_creditheader'><?tr("Application Feed");?></div>
-		<div class='ca_center ca_credit'>Andrew Zawadzki, Kode, Limetech</div>
+		<div class='ca_center ca_credit'>Andrew Zawadzki, Kode, Lime Technology Inc</div>
 		<div class='ca_center ca_creditheader'><?tr("Additional Testing");?></div>
-		<div class='ca_center ca_credit'>CHBMB, SpaceInvaderOne, Sparklyballs, wgstarks, DJoss, Zer0Nin3r, Mex, prostuff1, bonienl, ljm42, kizer, trurl, Jos, Limetech, SimonF, ich777, jimmy898, Alex.b, neruve, Eugeni_CAT, ChaseCares, TheEyeTGuy</div>
+		<div class='ca_center ca_credit'>CHBMB, SpaceInvaderOne, Sparklyballs, wgstarks, DJoss, Zer0Nin3r, Mex, prostuff1, bonienl, ljm42, kizer, trurl, Jos, Lime Technology Inc, SimonF, ich777, jimmy898, Alex.b, neruve, Eugeni_CAT, ChaseCares, TheEyeTGuy, dlandon</div>
 		<div class='ca_center ca_creditheader'><?tr("Additional Libraries");?></div>
 		<div class='ca_center ca_credit'>Awesomeplete (Lea Verou)<br>Chart.js (various)<br>chartjs-plugin-trendline (Marcus Alsterfjord)<br>XML2Array/Array2XML (Miles Johnson)<br>sprintf.js (Alexandru Mărășteanu) (&lt; Unraid 6.10 only)<br>Magnific-Popup (Dmitry Semenov)</div>
 		<br>
