--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
@@ -17,6 +17,7 @@
 	<li class='caMenuItem favouriteRepo onlyShowWithFeed'><?tr("Favourite Repo");?></li>
 	<hr class='onlyShowWithFeed'>
 
+	<ul class='caMenu'>
 	<span id='category_list' class='onlyShowWithFeed'></span>
 	<li class='categoryMenu caMenuItem allApps onlyShowWithFeed nonDockerSearch' data-category='All'><?tr("All Apps");?></li>
 	<hr class='category_hr'>
