Fixed: background updates weren't checking for language updates

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
@@ -56,6 +56,7 @@
 <div id='sortIconArea' style='display:none;'><?tr("Sort By:")?> <a id='defaultSort' class='sortIcons enabledIcon' data-sortBy='Name' data-sortDir='Up'><?tr("Name Ascending")?></a><a class='sortIcons' data-sortBy='Name' data-sortDir='Down'><?tr("Name Descending")?></a><a class='sortIcons' data-sortBy='downloads' data-sortDir='Down'><?tr("Downloads")?></a><a class='sortIcons' data-sortBy='FirstSeen' data-sortDir='Down'><?tr("Date Added")?></a></span></div>
 <div id='templates_content'><div class='ca_templatesDisplay'><font size='6'><?tr("Updating Content");?></font></div></div>
 <div class='multi_installDiv'><input class='multi_install multi_installButton' type='button' value='<?tr("Install Selected Applications");?>' disabled><input type='button' class='multi_installAll' value='<?tr("Select all on page")?>'><input type='button' class='multi_installClear' value='<?tr("Clear")?>' disabled><input type='button' class='multi_deleteButton' style='visibility:hidden;' value='<?tr("Delete")?>'></input></div>
+<div class='checkForUpdates'><input class='checkForUpdatesButton' type='button' value='<?tr("Check For Updates")?>'></input></div>
 </div>
 </div>
 <span id='debugging'></span>
